--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ body{
     color: white;
     font-size: 64px;
     font-family: 'Roboto';
+    margin-right: 26px;
 }
 
 .buttons{
-    height: 460px;
+    height: 360px;
     width: 100%;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr ;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
 }
@@ -45,11 +46,56 @@ button{
     height: 80px;
     border-radius: 100%;
     justify-self: center;
+    border: 0;
+    color: white;
+    font-size: 48px;
+    font-family: 'Roboto';
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+.operands{
+    background-color: #FFB800;
+}
+
+.numbers{
+    background-color: #6D6D6D;
+}
+
+.rest{
+    background-color: #AEAEAE;
+    font-size: 40px;
+}
+
+.low-buttons{
+    margin-top: 5px ;
+    height: 100px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 .zero{
-    width: 80px;
+    width: 160px;
     height: 80px;
-    border-radius: 100%;
+    border-radius: 140px;
     justify-self: center;
-    background-color: aqua;
+    background-color: #6D6D6D;
+    color: white;
+    font-size: 48px;
+    font-family: 'Roboto';
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    user-select: none;
+}
+
+.zero:hover{
+    cursor: pointer;
+}
+
+p{
+    margin-left: 24px;
 }
